--- a/style.css
+++ b/style.css
@@ -1,15 +1,55 @@
   body {
-    font: 400 15px/1.8 Lato, sans-serif;
-    color: #777;
+    font-family: 'Open Sans', sans-serif;
+    color: #0d586d;
+    font-size: 20px;
+  }
+  h1{
+    font-family: 'Passion One';
+    color: #d9410c;
+    font-size: 60px;
+    text-shadow: 3px 2px 0px #fff, 6px 6px 0px rgba(0,0,0,0.15);
+  }
+  h2{
+    margin: 10px 0 30px 0;
+    /* letter-spacing: 10px;       */
+    font-size: 30px;
+    color: #0d586d;
+
   }
   h3, h4 {
     margin: 10px 0 30px 0;
-    letter-spacing: 10px;      
+    /* letter-spacing: 10px;       */
+    font-size: 30px;
+    color: #1c9bc6;
+  }
+  h5 {
+    margin: 10px 0 30px 0;
+    /* letter-spacing: 10px;       */
     font-size: 20px;
     color: #1c9bc6;
   }
+  .card-text{
+    margin: 10px 0 30px 0;
+    /* letter-spacing: 10px;       */
+    font-size: 15px;
+    color: #1c9bc6;
+  }
+  .col-sm-3{
+    width: 20%;
+    margin: 15px;
+  }
   .container {
-    padding: 80px 120px;
+    width: 90%;
+    padding: 40px 0px;
+  }
+  .container2 {
+    padding: 20px 30px;
+    background-color:#137595;
+    border-radius: 10px;
+  }
+  .container3 {
+    padding: 5% 25%;
+    
   }
   .person {
     border: 10px solid transparent;
@@ -19,28 +59,15 @@
     opacity: 0.7;
   }
   .person:hover {
-    border-color: #f1f1f1;
+    border-color: #ffffff;
   }
-  .carousel-inner img {
-    -webkit-filter: grayscale(90%);
-    filter: grayscale(90%); /* make all photos black and white */ 
-    width: 100%; /* Set width to 100% */
-    margin: auto;
-  }
-  .carousel-caption h3 {
-    color: #fff !important;
-  }
-  @media (max-width: 600px) {
-    .carousel-caption {
-      display: none; /* Hide the carousel text when the screen is less than 600 pixels wide */
-    }
-  }
+
   .bg-1 {
-    background: #137595;
-    color: #bdbdbd;
+    background: #199cc4;
+    color: #ffffff;
   }
   .bg-1 h3 {color: #fff;}
-  .bg-1 p {font-style: italic;}
+  .bg-1 p {font-family: 'Open Sans', sans-serif;}
   .list-group-item:first-child {
     border-top-right-radius: 0;
     border-top-left-radius: 0;
@@ -49,73 +76,83 @@
     border-bottom-right-radius: 0;
     border-bottom-left-radius: 0;
   }
-  .thumbnail {
-    padding: 0 0 15px 0;
-    border: none;
-    border-radius: 0;
-  }
-  .thumbnail p {
-    margin-top: 15px;
-    color: #555;
-  }
+  
   .btn {
-    padding: 10px 20px;
+    
     background-color: #ffffff;
     color: #137595;
     border-radius: 0;
     transition: .2s;
+    
+    bottom: 10px;
+    left: 45%;
+    justify-content: center;
+    bottom: 0;
+  
   }
   .btn:hover, .btn:focus {
-    border: 1px solid #333;
+    border: 1px solid #0d586d;
     background-color: #fff;
     color: #000;
   }
   
   .nav-tabs li a {
-    color: #777;
+    color: #0d586d;
   }
-  #googleMap {
-    width: 100%;
-    height: 400px;
-    -webkit-filter: grayscale(100%);
-    filter: grayscale(100%);
-  }  
+ 
   .navbar {
-    font-family: Montserrat, sans-serif;
+    font-family: 'Open Sans', sans-serif;
     margin-bottom: 0;
     background-color: #137595;
     border: 0;
-    font-size: 11px !important;
-    letter-spacing: 4px;
-    opacity: 0.9;
+    font-size: 12px !important;
+    /* letter-spacing: 4px; */
+    /* opacity: 0.9; */
+    padding: 0px 135px;
   }
   .navbar li a, .navbar .navbar-brand { 
-    color: #d5d5d5 !important;
+    color: #ffffff !important;
   }
   .navbar-nav li a:hover {
     color: #fff !important;
   }
   .navbar-nav li.active a {
-    color: #fff !important;
-    background-color: #29292c !important;
+    color: #094253!important;
+    background-color: #ffffff !important;
   }
   .navbar-default .navbar-toggle {
     border-color: transparent;
   }
   .open .dropdown-toggle {
     color: #fff;
-    background-color: #555 !important;
+    background-color: #0d586d !important;
   }
   .dropdown-menu li a {
-    color: #000 !important;
+    color: rgb(255, 255, 255) !important;
+    background-color: #094253 !important;
   }
   .dropdown-menu li a:hover {
-    background-color: red !important;
+    background-color: #137595 !important;
+    
   }
+
+  .card{
+    background-color: #ffffff !important;
+    border-radius: 10px;
+    text-align: center;
+    width: 250px;
+    height: 400px;
+    
+  }
+  .card-img-top{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+
   footer {
     background-color: #137595;;
     color: #f5f5f5;
-    padding: 32px;
+    padding: 10px;
   }
   footer a {
     color: #f5f5f5;
@@ -129,4 +166,12 @@
   }
   textarea {
     resize: none;
+  }
+  .icon-bar{
+    color: #ffffff;
+  }
+  .card-bottom{
+    position: absolute;
+    bottom: 0;
+    left: 95px;
   }
