--- a/style.css
+++ b/style.css
@@ -140,8 +140,8 @@
     background-color: #ffffff !important;
     border-radius: 10px;
     text-align: center;
-    width: 250px;
-    height: 400px;
+    /* width: 250px;
+    height: 400px; */
     
   }
   .card-img-top{
@@ -179,3 +179,6 @@
       color:#ffffff;
       text-decoration: underline;
   }
+  /* .card-deck>.card{
+padding: 30px !important;; 
+  } */
