--- a/style.css
+++ b/style.css
@@ -23,13 +23,13 @@ body {
     color: #1c9bc6;
   }
   h5 {
-    margin: 10px 0 30px 0;
+    margin: 10px 0 20px 0;
     /* letter-spacing: 10px;       */
     font-size: 20px;
     color: #1c9bc6;
   }
   .card-text {
-    margin: 10px 0 30px 0;
+    margin: 10px 0 0px 0;
     /* letter-spacing: 10px;       */
     font-size: 15px;
     color: #1c9bc6;
@@ -84,7 +84,7 @@ body {
   .btn {
     background-color: #ffffff;
     color: #137595;
-    border-radius: 0;
+    border-radius: 30px;
     transition: 0.2s;
   
     bottom: 10px;
@@ -157,7 +157,12 @@ body {
     flex-wrap: wrap;
     justify-content: center;
 }
-
+.card-content{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height:160px; 
+}
   footer {
     background-color: #137595;
     color: #f5f5f5;
@@ -199,9 +204,10 @@ body {
   }
   img {
     width:200px;
-    height:400px;
+    height:200px;
     object-fit:cover;
   }
+
   @media only screen and (max-width: 1250px) {
     /* .card {
       width: 300px;
